# The-Chess-of-Yggdrasill

./: .gitignore  CMakeLists.txt  README.md  cell_label.cpp  cell_label.h  chessBoard.cpp  chessBoard.h  connection.cpp  connection.h  connection.ui  local_choice.cpp  local_choice.h  local_choice.ui  local_master.cpp  local_master.h  local_master.ui  local_slave.cpp  local_slave.h  local_slave.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pic.qrc  replay.cpp  replay.h  single_play.cpp  single_play.h  single_play.ui
pic/: 棋子1.psd  棋子2.psd  棋子3.psd  背景.psd
